checking for error

--- a/youtube/webpage/templates/index.html
+++ b/youtube/webpage/templates/index.html
@@ -82,7 +82,7 @@
             ReactJs
         </div>
         <div class="chips__item">
-            Angular Js
+            Angular Js Coarse
         </div>
     </div>
 
