--- a/youtube/webpage/templates/video_detail.html
+++ b/youtube/webpage/templates/video_detail.html
@@ -19,7 +19,7 @@
 
     <!-- Video Player -->
     <div class="video-detail__player">
-        <video controls>
+        <video controls poster="{{ video.thumbnail.url }}" muted loop >
             <source src="{{ video.video_file.url }}" type="video/mp4">
             Your browser does not support the video tag.
         </video>
@@ -49,4 +49,8 @@
         </form>
     </div>
 </main>
+
+<aside>
+    
+</aside>
 {% endblock %}
