--- a/youtube/webpage/templates/video_detail.html
+++ b/youtube/webpage/templates/video_detail.html
@@ -25,7 +25,7 @@
         </video>
     </div>
 
-    <!-- Comments Section -->
+    {% comment %} <!-- Comments Section -->
     <div class="video-detail__comments">
         <h3>Comments</h3>
         {% for comment in video.comments.all %}
@@ -47,7 +47,7 @@
             <textarea name="content" rows="4" placeholder="Write your comment here..." required></textarea>
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
-    </div>
+    </div> {% endcomment %}
 </main>
 
 <aside>
