--- a/youtube/webpage/templates/basic.html
+++ b/youtube/webpage/templates/basic.html
@@ -91,7 +91,8 @@
     <!-- SIDE NAVIGATION -->
     <div class="sidebar"> 
         <section class="sidebar__section">
-            <a class="sidebar__section__link sidebar__section__link--selected" href="https://www.youtube.com/" title="Home">
+          
+            <a class="sidebar__section__link sidebar__section__link--selected active" href="https://www.youtube.com/" title="Home">
                 <svg viewBox="0 0 24 24"><g><path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8"></path></g></svg>
                 <span>
                     Home
