--- a/youtube/webpage/static/css/add_video.css
+++ b/youtube/webpage/static/css/add_video.css
@@ -1,14 +1,14 @@
 /* General Styles */
-.add-video-form {
+.add-video-form .form-container {
     font-family: 'Poppins', sans-serif;
     color: #ffffff;
-    /* background-color: #080710; */
+    background-color: #080710;
     padding: 20px;
 }
 
 /* Form Container Styles */
 .form-container {
-    max-width: 200px;
+    max-width: 400px;
     margin: 0 auto;
     padding: 20px;
     background-color: rgba(255, 255, 255, 0.13);
