--- a/youtube/webpage/templates/video_detail.html
+++ b/youtube/webpage/templates/video_detail.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{%static 'css/video_display.css'%}">
-    <title>Video 9| Elon musk and TATA</title>
+     <script src="{% static 'js/video_details.js' %}" defer></script>
+    <title>{{ video_personal.title }}</title>
 </head>
 
 <body>
